	* src/context.c:
	* src/auth.c:
	* src/message.c: If OTRL_DEBUGGING is non-zero, then a message
	containing a special debug string ("?OTR!") will cause debug
	info to be printed to stderr.  (This #define should *not* be set
	in release code.)

	* src/auth.c:
	* src/auth.h:
	* src/message.c: Correct the logic for handling incoming COMMIT
	messages when we've recently sent our own COMMIT message.

2012-08-24

	* README:
	* configure.ac: Prepare for release 4.0.0

2012-08-24

	* src/message.c: Consider copying the master auth context to the
	child, even if the child is already in ENCRYPTED, because we
	might be trying to refresh a private conversation.

2012-08-22

	* configure.ac: Use gcc and ld hardening flags, where possible.
	* configure.ac:
	* src/auth.c:
	* src/dh.c:
	* src/mem.c:
	* src/privkey.c:
	* src/proto.c:
	* src/sm.c:
	* toolkit/sesskey.c: Build cleanly with -Wall -Wextra
	-Wformat-security -Wno-unused-parameter

2012-08-17

	* src/message.c: Don't call memchr(foo,'\0',-1) even if it has
	no ill effects.  Thanks to George Kadianakis
	<desnacked@riseup.net> for the report.

2012-07-20

	* src/message.c, src/instag.c, toolkit/parse.c, src/sm.c,
	src/proto.c, src/privkey.c, src/auth.c, src/context.[ch]:
	Fix some memory leaks, some NULL pointer handling, and
	compilation warnings.  Thanks to Paul Wouters
	<pwouters@redhat.com> for the report.

	* src/message.c: Better handling of OTRv3 fragments.

2012-07-19

	* src/b64.[ch], src/proto.c, toolkit/parse.c: Clean up the
	previous b64 patch and apply it to all places where
	otrl_base64_decode() is called.

2012-07-17

	* src/b64.c: Use ceil instead of floor to compute the size
	of the data buffer.  This prevents a one-byte heap buffer
	overflow.  Thanks to Justin Ferguson <jnferguson@gmail.com>
	for the report.

2012-06-21

	* src/context.c: A couple bug fixes.
	* Release 4.0.0-beta2

2012-06-07

	* Release 4.0.0-beta1

2012-05-08:

	* src/instag.c:
	* src/message.c: Returning proper gcry types to avoid 