@@ -451,8 +451,14 @@ static gcry_error_t send_or_error_auth(const OtrlMessageAppOps *ops,
 	if (msg && *msg) {
 	    fragment_and_send(ops, opdata, context, msg,
 		    OTRL_FRAGMENT_SEND_ALL, NULL);
-	    context->context_priv->lastsent = time(NULL);
-	    otrl_context_update_recent_child(context, 1);
+	    /* Update the "last sent" fields, unless this is a version 3
+	     * message typing to update the master context (as happens
+	     * when sending a v3 COMMIT message, for example). */
+	    if (context != context->m_context ||
+		    context->auth.protocol_version != 3) {
+		context->context_priv->lastsent = time(NULL);
+		otrl_context_update_recent_child(context, 1);
+	    }
 	}
     } else {
 	if (ops->handle_msg_event) {
